--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">RemindMi</string>
+
+    <!--Reminder list screen-->
+    <string name="section_for_future_header">For Future</string>
+    <string name="section_today_header">Today</string>
+    <string name="section_older_header">Older</string>
+
+    <!--Set Reminder screen-->
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="set_reminder_date">Set Reminder</string>
+    <string name="high_priority">High Priority</string>
+    <string name="no_priority">Normal</string>
+    <string name="low_priority">Low Priority</string>
+
+    <!--Cancel Dialog-->
+    <string name="dialog_title">Cancel</string>
+    <string name="dialog_message">Are you sure you want to cancel reminder?</string>
+    <string name="dialog_positive_text">Yes</string>
+    <string name="dialog_negative_text">No</string>
 </resources>
