--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="section_older_header">Older</string>
 
     <!--Set Reminder screen-->
+    <string name="set_reminder_text">Set Reminder</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="set_reminder_date">Set Date</string>
@@ -14,11 +15,14 @@
     <string name="high_priority">High Priority</string>
     <string name="no_priority">Normal</string>
     <string name="low_priority">Low Priority</string>
-    <string name="button_save_text">Set Reminder</string>
+    <string name="button_save_text">@string/set_reminder_text</string>
     <string name="button_select_date_text">Okay</string>
     <string name="set_reminder_title_action">Cancel Reminder</string>
     <string name="reminder_date_text">From %s</string>
     <string name="reminder_time_text">At %d:%d</string>
+
+    <!--Reminder Detail screen-->
+    <string name="reminder_details_text">Reminder Detail</string>
 
     <!--Cancel Dialog-->
     <string name="dialog_title">Cancel</string>
